infrastructure/mgmt/cerebro-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cerebro
  namespace: mgmt
spec:
  gateways:
    - istio-ingress/external-gateway
  hosts:
    - cerebro.example.com
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: cerebro.mgmt.svc.cluster.local
            port:
              number: 9000
